# LapH_EigSys

./: CMakeLists.txt  README.md  make-qbig2-build.sh
include/: EigenVector.h  GaugeField.h  config_utils.h  eigensystem.h  io.h  io_utils.h  navigation.h  par_io.h  ranlxs.h  read_write.h  read_write_mpi.h  recover_spec.h  shell_matop.h  sourceshape.h  sourceshape_funcs.h  statistics.h  structs.h  timeslice.h  variables.h
installation_scripts/qbig/: 1_clime.sh  2_petsc.sh  3_slepc.sh  4_laph_eigsys.sh
modules/: EigenVector.cpp  GaugeField.cpp  check_eigenvector.cpp  config_utils.cpp  eigensystem.cpp  invert_eigenvalues.cpp  io.cpp  io_utils.cpp  navigation.cpp  par_io.cpp  par_io.h  phase.cpp  ranlxs.cpp  read_write.cpp  read_write_mpi.cpp  recover_spec.cpp  shell_matop.cpp  sourceshape.cpp  sourceshape_funcs.cpp  stat_test.cpp  statistics.cpp  timeslice.cpp
src/: Makefile  Makefile_jureca  Makefile_mpi_test  Makefile_qbig  bin_to_hdf5_mpi.cpp  config_utils.d  eigensystem.d  eigenvalues.1000.000  eigenvalues.1000.001  eigenvalues.1000.002  eigenvalues.1000.003  eigenvectors.1000.000  eigenvectors.1000.001  eigenvectors.1000.002  eigenvectors.1000.003  ev_largest.cpp  ev_ts  ev_ts.cpp  ev_ts.d  io.d  io_utils.d  mymake  parameters.txt  phases.1000.000  phases.1000.001  phases.1000.002  phases.1000.003  read_write.d  recover_spec.d  set_phase.cpp  shell_matop.d  sourceshape.cpp  test.h5  test_eigensystems.cpp  test_io_checks.cpp  test_mpi_io.cpp  tune_hyp.cpp
